--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
   "author": "Sean Zatz",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.16.0",
     "ejs": "^2.6.1",
-    "express": "^4.16.3",
-    "mysql": "^2.15.0"
+    "express": "^4.14.0",
+    "mysql": "^2.13.0",
+    "bcrypt-nodejs": "0.0.3",
+    "dotenv": "^4.0.0",
+    "express-session": "^1.15.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "sequelize": "^3.30.1",
+    "connect-flash": "~0.1.1"
   }
 }
